# useful-scripts

./: pyproject.toml
src/: currency_convertion.py  formatting.py  geo_locations.py  managing_files.py
