[tool.poetry]
name = "useful-scripts"
version = "0.1.0"
description = ""
authors = ["leonardofj <leonardofj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
unidecode = "^1.3.6"
pandas = "^2.1.1"
geopy = "^2.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
